@@ -1,3 +1,9 @@
+2007-05-10  Alexandre Oliva  <aoliva@redhat.com>
+
+	* elf32-frv.c (_frvfdpic_check_discarded_relocs): New.
+	(frvfdpic_elf_discard_info): New.
+	(elf_backend_discard_info): Define for FDPIC.
+
 2007-05-09  Mark Shinwell  <shinwell@codesourcery.com>
 
 	* elf32-arm.c (bfd_elf32_arm_vfp11_erratum_scan): Don't
